Bug 1633713 - Set WS_EX_COMPOSITED to PiP window on Windows7 r=jrmuizel

When window is PiP window on Windows7, WS_EX_COMPOSITED is set to suppress flickering during resizing with hardware acceleration as a workaround.

PiP window detection in nsAppShellService::JustCreateTopWindow() mimics Linux/Gtk implementation.

Differential Revision: https://phabricator.services.mozilla.com/D77663